added homepage line to package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "nicolasmuntwyler",
+  "homepage": "https://nicolas.muntwyler.gitlab.io/nicolasmuntwyler/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
